flowcontroller/yamls/networkpolicy-allow-flink-to-flink.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flink-to-flink
  annotations:
    flowDef:
      priority: 1
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector: 
    matchLabels:
      app: flink
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: flink
      namespaceSelector:
        matchLabels:
          name: ((/spec/namespace))
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: flink
      namespaceSelector:
        matchLabels:
          name: ((/spec/namespace))
